--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>Gender Detection</title>
   <style>
     body {
+      width:100%;
+      height:100%;
+      min-width: 1000px;
+      min-height: 1000px;
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif; /* Add a fallback font */
