--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      height: 800px; 
+      height: 1000px;
+      width:100%;
       background-image: url('bg.jpg');
       background-size: cover;
       background-position: center;
