--- a/index.html
+++ b/index.html
@@ -5,22 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gender Detection</title>
   <style>
-    body {
-      width:100%;
-      height:100%;
-      min-width: 1000px;
-      min-height: 1000px;
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif; /* Add a fallback font */
-    }
-
     .container {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      height: 1000px;
-      width:100%;
+      
+      height: 800px; 
       background-image: url('bg.jpg');
       background-size: cover;
       background-position: center;
@@ -72,8 +62,32 @@
     }
     label{
         font-size: 20px;
-        color: rgb(127, 192, 224);
+        color: white;
     }
+    @media screen and (max-width: 768px) {
+  .container {
+    flex-direction: column; /* Stack content vertically */
+    height: auto; /* Allow content to expand vertically */
+  }
+
+  .content {
+    width: 100%; /* Full width for smaller screens */
+  }
+
+  h1 {
+    font-size: 8vw; /* Adjust font size for smaller screens */
+    margin-bottom: 5vw; /* Adjust margin for smaller screens */
+  }
+
+  form {
+    width: 90%; /* Adjust form width for smaller screens */
+    padding: 5vw; /* Adjust padding for smaller screens */
+  }
+
+  label {
+    font-size: 3vw; /* Adjust font size for smaller screens */
+  }
+}       
    
   </style>
 </head>
