--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      
       height: 800px; 
       background-image: url('bg.jpg');
       background-size: cover;
@@ -44,12 +43,12 @@
 
     form {
       border: 1px solid white;
-      width: 600px; /* Adjust width as needed */
+      width: 600px;
       padding: 20px;
       text-align: center;
-      background-color: rgba(255, 255, 255, 0.3); /* Adjust background opacity */
+      background-color: rgba(255, 255, 255, 0.3);
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); /* Add a shadow */
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
     }
 
     input[type="submit"] {
@@ -65,30 +64,31 @@
         color: white;
     }
     @media screen and (max-width: 768px) {
-  .container {
-    flex-direction: column; /* Stack content vertically */
-    height: auto; /* Allow content to expand vertically */
-  }
+      .container {
+        flex-direction: column;
+        height: auto;
+      }
 
-  .content {
-    width: 100%; /* Full width for smaller screens */
-  }
+      .content {
+        width: 100%;
+        height: 100%;
+      }
 
-  h1 {
-    font-size: 8vw; /* Adjust font size for smaller screens */
-    margin-bottom: 5vw; /* Adjust margin for smaller screens */
-  }
+      h1 {
+        font-size: 8vw;
+        margin-bottom: 5vw;
+      }
 
-  form {
-    width: 90%; /* Adjust form width for smaller screens */
-    padding: 5vw; /* Adjust padding for smaller screens */
-  }
+      form {
+        width: 90%; 
+        height: 60%;
+        padding: 5vw;
+      }
 
-  label {
-    font-size: 3vw; /* Adjust font size for smaller screens */
-  }
-}       
-   
+      label {
+        font-size: 3vw;
+      }
+    }       
   </style>
 </head>
 <body>
