--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-body {
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gender Detection</title>
+  <style>
+    body {
   height: 100vh;
   width: 100vw;
   margin: 0;
@@ -91,3 +98,20 @@ label{
     font-size: 3vw;
   }
 }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="content left-content">
+      <h1>VOICE BASED<br>GENDER DETECTION</h1>
+    </div>
+    <div class="content right-content">
+      <form action="">
+        <label for="voiceInput">Upload an audio file:</label><br><br>
+        <input type="file" id="voiceInput" name="voiceInput" accept="audio/*"><br><br>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+  </div>
+</body>
+</html>
